[package]
name = "sulove"
version = "0.1.0"
edition = "2024"
description = "A Habbo Hotel emulator written in Rust"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.11.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "time"] }
thiserror = "1.0.56"
rsa = "0.9.6"
base64 = "0.21.7"
rand = "0.8.5"
chrono = "0.4.32"
regex = "1.10.2"
rustls = "0.23.1"
config = "0.14.0"
toml = "0.8.9"
once_cell = "1.19.0"
byteorder = "1.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
actix-web = "4.4.1"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.17"
hex = "0.4.3"
